# RootScalar

./: CMakeLists.txt  LICENSE.txt  README.md  RootScalar.cpp  RootScalar.hpp  RootScalar.sln  RootScalar.vcxproj  RootScalar.vcxproj.filters  Test_RootScalar.cpp
